ikiwiki (3.20110708) UNRELEASED; urgency=low

  * Add build dep on python-support. Closes: #633536

 -- Joey Hess <joeyh@debian.org>  Mon, 11 Jul 2011 13:03:04 -0400

ikiwiki (3.20110707) unstable; urgency=low

  * userlist: New plugin, lets admins see a list of users and their info.
  * aggregate: Improve checking for too long aggregated filenames.
  * Updated to jQuery 1.6.1.
  * attachment: Speed up multiple file uploads by storing uploaded files
    in a staging area until the page is saved/previewed, rather than
    refreshing the site after each upload.
    (Sponsored by The TOVA Company.)
  * attachment: Files can be dragged into the edit page to upload them.
    Multiple file batch upload support. Upload progress bars.
    AJAX special effects. Impemented using the jQuery-File-Upload widget.
    (If you don't have javascript don't worry, I kept that working too.)
    (Sponsored by The TOVA Company.)
  * Add libtext-multimarkdown-perl to Suggests. Closes: #630705
  * headinganchors: Plugin by Paul Wise that adds ids to <hn> headings.
  * html5 is not experimental anymore. But not the default either, quite yet.
  * Support svg as a inlinable image type; svg images can be included on a
    page by simply linking to them, or by using the img directive.
    Note that sanitizing svg files is still not addressed.
  * img: Generate png format thumbnails for svg images.
  * Preserve mixed case in page creation links, and when creating a page
    whose title is mixed case, allow selecting between the mixed case and
    all lower-case names.
  * Fix ikiwiki-update-wikilist -r to actually work.
  * comments: collect metadata in a scan-phase preprocess hook, which
    fixes sorting comments by date. (smcv)
  * Run scan hooks for internal pages (preprocess hooks already run in scan
    mode) (smcv)
  * inline: Handle obfuscated urls, such as the mailto urls generated by
    markdown when forcing urls absolute.