@@ -1,6 +1,8 @@
 ikiwiki (3.20110708) UNRELEASED; urgency=low
 
   * Add build dep on python-support. Closes: #633536
+  * attachment: Bugfix to move upload attachments out of holding area
+    when saving.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 11 Jul 2011 13:03:04 -0400
 
